# maribro-party

./: .gitignore  AGENTS.md  README.md  export.sh  pyproject.toml  server.py
backend/: export.sh  server.py
data/: session.json
docs/: design.md
games/: _template.html  cat-dog-dash.html  flappy-arena.html  score-race.html
public/: app.js  index.html  maribro-sdk.js  style.css
public/avatars/: avatars.json
scripts/: verify.py
skills/: SKILL.md
skills/host-server/: SKILL.md
skills/host-server/scripts/: debug_host_server.sh  restart_host_server.sh  restart_host_tmux.sh  setup_host_tmux.sh  start_host_server.sh  start_tunnel.sh  stop_host_tmux.sh
skills/init-game/: SKILL.md
skills/minigame-dev/: SKILL.md
skills/setup/: SKILL.md
skills/setup/scripts/: setup_env.py
skills/verify/: SKILL.md
skills/verify-game/: SKILL.md
skills/verify-game/scripts/: verify.py
